temp fix on header top gap

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ header {
 /* NAVBAR */
 nav {
   height: 60px;
-  margin-top: 0;
+  margin-top: -10px;;
   background-color: #2f2e2e;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
